--- a/nestproject.html
+++ b/nestproject.html
@@ -1,1 +1,8 @@
+name:python workflow for sum frequenccies application
+on:
+workflow_dispatch:
+push:
+branches: [ main ]
+pull_request:
+branches: [main]
 
